Fixed spacing error

--- a/style.css
+++ b/style.css
@@ -24,10 +24,6 @@ a:hover {
     margin-bottom: 50px;
 }
 
-hr {
-    background: none;
-}
-
 /* Navbar */
 #pagetitle {
     color: white;
